--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,8 +2,6 @@ name: Build
 
 on:
   push:
-    branches:
-      - develop
   workflow_dispatch:
 
 env:
@@ -29,5 +27,5 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: true
+          push: ${{ github.ref_name == github.event.repository.default_branch }}
           tags: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_REPOSITORY }}:latest
